--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Identified and logged bugs using JIRA, and collaborated with the development tea
             <h3 class="title">contact info</h3>
 
             <div class="info">
-                <h3><i class="fas fa-envelope"></i> phegaderashmi@gmail.com </h3>
+                <h3><i class="fas fa-envelope"></i> rashmiphegade05@gmail.com </h3>
                 <h3><i class="fas fa-phone"></i> +91 8153818569</h3>
                 <h3><i class="fas fa-map-marker-alt"></i> Mumbai, India -400104.</h3>
             </div>
