--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@ Identified and logged bugs using JIRA, and collaborated with the development tea
             <h3 class="title">contact info</h3>
 
             <div class="info">
-                <h3><i class="fas fa-envelope"></i> rashmiphegade05@gmail.com </h3>
+                <h3><i class="fas fa-envelope"></i>   rashmiphegade05@gmail.com </h3>
                 <h3><i class="fas fa-phone"></i> +91 8153818569</h3>
                 <h3><i class="fas fa-map-marker-alt"></i> Mumbai, India -400104.</h3>
             </div>
         </div>
 
-        <form class="form" action="https://api.web3forms.com/submit" method="POST">
+<form action="https://api.web3forms.com/submit" method="POST">
             <div class="form-content">
                 <h1> Message Me </h1>
                 <input type="hidden" name="access_key" value="3cd062cb-2b41-44d6-936e-777856c09c78">
