--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <span> Frameworks:</span> ASP.NET, Bootstrap, Tailwind Css<br>
                         
                         <span> Soft Skills: </span>Problem Solving, Team work, Adaptability, Communication                   </h3>
-            <a href="Rashmi-Phegade(software _Testing).pdf"><button class="btn">download CV <i class="fas fa-download"></i> </button></a>
+            <a href="Rashmi-Phegade.pdf"><button class="btn">download CV <i class="fas fa-download"></i> </button></a>
         </div>
 
         <div class="counter">
